--- a/package.json
+++ b/package.json
@@ -18,21 +18,26 @@
     "@react-navigation/native": "^5.8.10",
     "@react-navigation/stack": "^5.12.8",
     "axios": "^0.21.1",
+    "prop-types": "^15.7.2",
     "react": "16.13.1",
+    "react-loading-skeleton": "^2.1.1",
     "react-native": "0.63.4",
+    "react-native-emoji": "^1.8.0",
     "react-native-gesture-handler": "^1.9.0",
     "react-native-parallax-scroll-view": "^0.21.3",
     "react-native-reanimated": "^1.13.2",
     "react-native-safe-area-context": "^3.1.9",
     "react-native-screens": "^2.16.1",
     "react-native-scrollable-tab-view": "^1.0.0",
+    "react-native-shimmer-placeholder": "^2.0.6",
     "react-native-splash-screen": "^3.2.0",
     "react-native-tab-view": "^2.15.2",
     "react-native-vector-icons": "^7.1.0",
     "react-native-webview": "^11.0.2",
     "react-redux": "^7.2.2",
     "redux": "^4.0.5",
-    "redux-thunk": "^2.3.0"
+    "redux-thunk": "^2.3.0",
+    "rn-placeholder": "^3.0.3"
   },
   "devDependencies": {
     "@babel/core": "^7.12.10",
