--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "@react-navigation/native": "^5.8.10",
     "@react-navigation/stack": "^5.12.8",
     "axios": "^0.21.1",
+    "humps": "^2.0.1",
     "moment": "^2.29.1",
+    "normalizr": "^3.6.1",
     "prop-types": "^15.7.2",
     "react": "16.13.1",
     "react-native": "0.63.4",
@@ -34,6 +36,7 @@
     "react-native-webview": "^11.0.2",
     "react-redux": "^7.2.2",
     "redux": "^4.0.5",
+    "redux-logger": "^3.0.6",
     "redux-thunk": "^2.3.0",
     "rn-placeholder": "^3.0.3"
   },
