--- a/package.json
+++ b/package.json
@@ -24,7 +24,9 @@
     "normalizr": "^3.6.1",
     "prop-types": "^15.7.2",
     "react": "16.13.1",
+    "react-lazyload": "^3.1.0",
     "react-native": "0.63.4",
+    "react-native-fast-image": "^8.3.4",
     "react-native-gesture-handler": "^1.9.0",
     "react-native-parallax-scroll-view": "^0.21.3",
     "react-native-reanimated": "^1.13.2",
